tests/expectations/compiler/core/algorithms/pedersen64_commit_to_field.out
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:17
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                 ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:20
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                    ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:23
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                       ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:26
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                          ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:29
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                             ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:32
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:35
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                   ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:38
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                      ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:41
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                         ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:44
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                            ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:47
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                               ^
Error [ETYC0372117]: Expected type `bool` but type `field` was found.
    --> compiler-test:38:50
     |
  38 |         return (a, b, c, d, e, f, g, i, j, k, m, n);
     |                                                  ^
